name:               SimpleEA
category:			AI
build-type:         Simple
version:            0.1
synopsis:           Simple evolutionary algorithm framework.
description:        Simple framework for running an evolutionary algorithm with
                    provided selection, recombination, and mutation operators.
license:            BSD3
License-file:       LICENSE
category:           Control
author:             Erlend Hamberg
maintainer:         ehamberg@gmail.com
stability:          experimental
tested-with:        GHC==7.0.1
homepage:           http://wiki.github.com/ehamberg/simpleea/
cabal-version:       >=1.2


Library
    build-depends:      base >=4, MonadRandom
    ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-orphans
    exposed-modules:    AI.SimpleEA, AI.SimpleEA.Utils
