name:               SimpleEA
category:			AI
build-type:         Simple
version:            0.1.1
synopsis:           Simple evolutionary algorithm framework.
description:        Simple framework for running an evolutionary algorithm by
                    providing selection, recombination, and mutation operators.
license:            BSD3
License-file:       LICENSE
category:           AI
author:             Erlend Hamberg
maintainer:         ehamberg@gmail.com
stability:          experimental
tested-with:        GHC==7.0.1
homepage:           http://www.github.com/ehamberg/simpleea/
cabal-version:       >=1.6


Library
    build-depends:      base >=4 && < 5, MonadRandom
    ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-orphans
    exposed-modules:    AI.SimpleEA, AI.SimpleEA.Utils

source-repository head
  type:     git
  location: git://github.com/ehamberg/simpleea.git
