name:               moo
category:           AI, Algorithms, Optimisation, Optimization
build-type:         Simple
version:            1.0
synopsis:           Genetic algorithm library
description:        Moo library provides building blocks to build custom
                    genetic algorithms in Haskell. They can be used to
                    find solutions to optimization and search problems.
                    .
                    Variants supported out of the box: binary (using
                    bit-strings) and continuous (real-coded).
                    .
                    Binary GAs: binary and Gray encoding; point mutation;
                    one-point, two-point, and uniform crossover.
                    Continuous GAs: Gaussian mutation; BLX-α, UNDX, and
                    SBX crossover.
                    Selection operators: roulette, and tournament;
                    with optional elitism, niching and scaling.
                    Constrained optimization: random constrained
                    initialization, death penalty, constrained
                    selection without a penalty function.

license:            BSD3
License-file:       LICENSE
category:           AI
maintainer:         Sergey Astanin <s.astanin@gmail.com>
author:             Sergey Astanin <s.astanin@gmail.com>
author:             Erlend Hamberg
stability:          experimental
homepage:           http://www.github.com/astanin/moo/
cabal-version:       >=1.8


Library
    build-depends:      base >=4
                      , monad-mersenne-random
                      , mersenne-random-pure64
                      , gray-code >= 0.2.1
                      , random >= 0.1
                      , random-shuffle >= 0.0.2
                      , mtl >= 2
                      , time
    ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-orphans
    exposed-modules:    Moo.GeneticAlgorithm
                      , Moo.GeneticAlgorithm.Types
                      , Moo.GeneticAlgorithm.Binary
                      , Moo.GeneticAlgorithm.Constraints
                      , Moo.GeneticAlgorithm.Continuous
                      , Moo.GeneticAlgorithm.Run
                      , Moo.GeneticAlgorithm.Random
                      , Moo.GeneticAlgorithm.Statistics
    other-modules:      Moo.GeneticAlgorithm.LinAlg
                      , Moo.GeneticAlgorithm.Utilities
                      , Moo.GeneticAlgorithm.StopCondition
                      , Moo.GeneticAlgorithm.Selection
                      , Moo.GeneticAlgorithm.Crossover
                      , Moo.GeneticAlgorithm.Niching

Test-Suite moo-tests
  Type:                 exitcode-stdio-1.0
  Main-Is:              moo-tests.hs
  Other-Modules:        Tests.Common
                      , Tests.Problems.Rosenbrock
                      , Tests.Internals.TestCrossover
                      , Tests.Internals.TestSelection
                      , Moo.GeneticAlgorithm
                      , Moo.GeneticAlgorithm.Types
                      , Moo.GeneticAlgorithm.Binary
                      , Moo.GeneticAlgorithm.Constraints
                      , Moo.GeneticAlgorithm.Continuous
                      , Moo.GeneticAlgorithm.Selection
                      , Moo.GeneticAlgorithm.Crossover
                      , Moo.GeneticAlgorithm.Niching
                      , Moo.GeneticAlgorithm.Run
                      , Moo.GeneticAlgorithm.Random
                      , Moo.GeneticAlgorithm.Utilities
                      , Moo.GeneticAlgorithm.LinAlg
                      , Moo.GeneticAlgorithm.Statistics
                      , Moo.GeneticAlgorithm.StopCondition
  Build-Depends:
      moo
    , base
    , HUnit
    , random >= 0.1
    , random-shuffle >= 0.0.2
    , monad-mersenne-random
    , mersenne-random-pure64
    , gray-code >= 0.2.1
    , mtl
    , time

source-repository head
  type:     git
  location: git://github.com/astanin/moo.git
